# Muks_Robotics_Assignment

./: .gitignore  Makefile  README.md
src/muks_robotics_assignment/: ARCHITECTURE.md  README.md  REPORT.md  package.xml  pytest.ini  setup.cfg  setup.py
src/muks_robotics_assignment/launch/: interactive_task2.launch.py  interactive_task3.launch.py  interactive_task4.launch.py  tasks_1_2_3.launch.py
src/muks_robotics_assignment/muks_robotics_assignment/: common_types.py  geometry_utils.py  interactive_path_smoothing_node.py  obstacle_avoidance.py  path_smoothing.py  path_smoothing_node.py  ros_message_utils.py  task1_path_smoothing_node.py  task2_trajectory_generation_node.py  task3_trajectory_tracking_node.py  task4_obstacle_avoidance_node.py  trajectory_generation.py  trajectory_tracking.py  waypoint_utils.py
src/muks_robotics_assignment/scripts/: generate_test_report.py  run_tests.sh
src/muks_robotics_assignment/test/: conftest.py  test_geometry_utils.py  test_obstacle_avoidance.py  test_path_smoothing.py  test_trajectory_generation.py  test_trajectory_tracking.py  test_waypoint_utils.py
src/muks_robotics_assignment/test_reports/: TEST_REPORT.md  pytest_junit.xml  pytest_output.txt
